--- a/Allgemein/Packages.tex
+++ b/Allgemein/Packages.tex
@@ -38,7 +38,7 @@
 \usepackage{xspace} % sorgt dafür, dass Leerzeichen hinter parameterlosen Makros nicht als Makroendezeichen interpretiert werden
 
 \usepackage{makeidx} % für Index-Ausgabe mit \printindex
-\usepackage[printonlyused]{acronym} % es werden nur benutzte Definitionen aufgelistet
+\usepackage{acronym} % es werden nur benutzte Definitionen aufgelistet
 
 % Einfache Definition der Zeilenabstände und Seitenränder etc.
 \usepackage{setspace}
