--- a/Inhalt/Analysephase.tex
+++ b/Inhalt/Analysephase.tex
@@ -63,13 +63,13 @@ Das Gehalt eines Produktionsplaners beträgt laut Experten etwa 14€ die Stunde
 
 Je nach Firmengröße und Anzahl der Planer variiert die Amortisationszeit stark. Daher wurden Anhand dreier Beispiele die Zeit berechnet.
 
-Die Amortisationszeit für eine kleine Firma mit 2 Planern beträgt:
+Die Amortisationszeit für eine Firma mit 2 Planern beträgt:
 $\frac{\eur{500}}{2 \cdot \eur{2300€} \mbox{/Jahr} } \approx 0,19 \mbox{ Jahre} \approx 10 \mbox{ Wochen}$.
 
-Die Amortisationszeit für eine mittelgroße Firma mit 50 Planern beträgt
+Die Amortisationszeit für eine Firma mit 50 Planern beträgt
 $\frac{\eur{500}}{50 \cdot \eur{2300€} \mbox{/Jahr} } \approx 0,004 \mbox{ Jahre} \approx 1,5 \mbox{ Tage}$.
 
-Die Amortisationszeit für eine große Firma mit 200 Planern beträgt
+Die Amortisationszeit für eine Firma mit 200 Planern beträgt
 $\frac{\eur{500}}{200 \cdot \eur{2300€} \mbox{/Jahr} } \approx 0,001 \mbox{ Jahre} \approx 9 \mbox{ Stunden}$.
 
 \subsection{Nutzwertanalyse}
@@ -78,7 +78,7 @@ In der folgenden Tabelle ~\ref{tab:Nutzwertanalyse} werden noch einige weitere P
 
 \tabelle{Nutzwertanalyse}{tab:Nutzwertanalyse}{Nutzwertanalyse}
 
-Sowie die Wirtschaftlichkeitsanalyse als auch die Nutzwertanalyse haben gezeigt wie sinnvoll und hilfreich diese Projekt ist.
+Sowie die Wirtschaftlichkeitsanalyse als auch die Nutzwertanalyse, in welchem das Order Comment Tool mit 123 Punkten der klare Gewinner ist, haben gezeigt wie sinnvoll und hilfreich diese Projekt ist.
 
 \subsection{Anwendungsfälle}
 \label{sec:Anwendungsfaelle}
