--- a/Inhalt/Entwurfsphase.tex
+++ b/Inhalt/Entwurfsphase.tex
@@ -34,7 +34,7 @@ Die Tabelle AUFK wird mittels einem Custom Include um ein Feld ZZ\_ORDER\_COMMEN
 	\label{fig:ECC02}
 \end{figure} 
 
-Im \ac{APO} wird keine extra Datenbank zum Speichern der Kommentare benötigt, da hier, wie bereits oben erwähnt,direkt die /SAPAPO/ORDFLDS per Custom Include um ein FELD ORDER\_COMMENT erweitert und für alle Aufträge genutzt werden kann.  
+Im \ac{APO} wird keine extra Datenbank zum Speichern der Kommentare benötigt, da hier, wie bereits oben erwähnt,direkt die /SAPAPO/ORDFLDS per Custom Include um ein Feld ORDER\_COMMENT erweitert und für alle Aufträge genutzt werden kann.  
 
 \begin{figure}[htb]
 	\centering
