--- a/Inhalt/Qualitätssicherung.tex
+++ b/Inhalt/Qualitätssicherung.tex
@@ -8,7 +8,7 @@ Während des Projekts, in der Mitte und am Ende gab es zwei Code Reviews welche 
 
 \subsection{Manuelle Tests}
 \label{sec:Manuelle Tests}
-Während der Entwicklungsphase wurde nach jedem Iterationsschritt die neu implementierte Funktionalität getestet und gegebenenfalls verbessert. Diese Tests haben länger gedauert als erwartet, jedoch konnte der Zeitverlust durch weniger Zeit für die Bug Fixes kompensiert werden, sodass diese Phase nicht länger als die Veranschlagten 6 Stunden gedauert hat. Außerdem wurde nach Abschluss der Entwicklung noch einmal der komplette Funktionsumfang der Anwendung getestet. 
+Während der Entwicklungsphase wurde nach jedem Iterationsschritt die neu implementierte Funktionalität getestet und gegebenenfalls verbessert. Diese Tests haben länger gedauert als erwartet, jedoch konnte der Zeitverlust durch weniger Zeit für die Bug Fixes kompensiert werden, sodass diese Phase nicht länger als die veranschlagten 6 Stunden gedauert hat. Außerdem wurde nach Abschluss der Entwicklung noch einmal der komplette Funktionsumfang der Anwendung getestet. 
 
 \subsection{Bug Fixing}
 \label{sec:Bug Fixing}
