--- a/Befehle.tex
+++ b/Befehle.tex
@@ -1,7 +1,3 @@
 % Tabellen, die den Zwischenstand nach einer Projektphase verdeutlichen
-\newcommand{\Zwischenstand}[2]{\subsection{Zwischenstand}Tabelle~\ref{tab:#2} zeigt den Zwischenstand nach der #1.\tabelle{Zwischenstand nach der #1}{tab:#2}{#2.tex}}
+\newcommand{\Zwischenstand}[2]{\subsection{Zeitlicher Zwischenstand}Tabelle~\ref{tab:#2} zeigt den zeitlichen Zwischenstand nach der #1.\tabelle{Zeitlicher Zwischenstand nach der #1}{tab:#2}{#2.tex}}
 
-% Abkürzungen
-\newcommand{\Versis}{\textsc{Versis}\xspace}
-\newcommand{\NI}{NatInfo\xspace}
-\newcommand{\AO}{\textsc{Alte Oldenburger} Krankenversicherung\xspace}
