--- a/Anhang/AnhangProgrammingGuidlines.tex
+++ b/Anhang/AnhangProgrammingGuidlines.tex
@@ -2,8 +2,8 @@
 \label{app:Programmierrichtlinien}
 Im folgenden Abschnitt werden kurz die am häufigsten gebrauchten Programmierrichtlinien des CAMELOT ITLabs aufgeführt.
 
-\subsubsection{Bennenung}
-\label{Bennenung}
+\subsubsection{Benennung}
+\label{Benennung}
 \paragraph{Variablen}
 Globale Variablen z.B. Variablen in Reports, müssen immer mit einem g(global) anfangen. 
 Lokale Variablen z.B. in Methoden von Klassen, müssen immer mit einem l(local) anfangen.
