--- a/Transaktionsverzeichnis.tex
+++ b/Transaktionsverzeichnis.tex
@@ -1,11 +1,11 @@
 % !TEX root = Projektdokumentation.tex
 \textbf{COR1-3}:
 \linebreak
-Diese Transaktion ist zum Erstellen, Bearbeiten und Anzeigen von Prozessaufträgen
+Diese Transaktion ist zum Erstellen, Bearbeiten und Anzeigen von Prozessaufträgen.
 
 \textbf{/SAPAPO/RRP3}:
 \linebreak
-Mithilfe der Produktsicht lassen sich zu einer vorher definierten Produkt-Werkskombination alle Forcasts, Prozessaufträge, Planaufträge, Produktionsaufträge, Kaufanforderungen und vieles mehr anzeigen lassen.
+Mithilfe der Produktsicht lassen sich zu einer vorher definierten Produkt-Werkskombination alle Forecasts, Prozessaufträge, Planaufträge, Produktionsaufträge, Kaufanforderungen und vieles mehr anzeigen.
 
 \textbf{CMOD}:
 \linebreak
@@ -17,4 +17,4 @@ Diese Transaktion dient zur Implementierung von \ac{BAdI}s.
 
 \textbf{se80}
 \linebreak
-Die se80 Transaktion ist die am meisten genutzte Transaktion. Mit ihr wird programmiert und es können Datenbanktabellen und Dictionary-Objekte erstellt werden.
+Die se80 Transaktion ist die in meinem Projekt am meisten genutzte Transaktion. Mit ihr wird programmiert und es können Datenbanktabellen und Dictionary-Objekte erstellt werden.
