--- a/Inhalt/Projektplanung.tex
+++ b/Inhalt/Projektplanung.tex
@@ -11,7 +11,7 @@ Eine detailliertere Zeitplanung findet sich im \Anhang{app:Zeitplanung}.
 
 \subsection{Ressourcenplanung}
 \label{sec:Ressourcenplanung}
-In der Ressourcenübersicht \Anhang{app:Ressourcen} sind alle Ressourcen aufgelistet, die für das Projekt eingesetzt wurden. Damit sind sowohl Hardware, Software und das Personal gemeint. Sie diente dazu, vorab zu überprüfen ob alle benötigten Mittel zur Verfügung stehen und um bei den beteiligten Personen entsprechen Zeit für z.B. Code Reviews zu buchen. Es wurde darauf geachtet, dass nur Software zum Einsatz kommt welche entweder kostenfrei (z.B. als Freeware oder Open Source) angeboten werden oder für die die Camelot ITLab GmbH bereits Lizenzen besitzt. Dadurch sollten die Projektkosten möglichst gering gehalten werden.
+In der Ressourcenübersicht \Anhang{app:Ressourcen} sind alle Ressourcen aufgelistet, die für das Projekt eingesetzt wurden. Damit sind sowohl Hardware, Software und das Personal gemeint. Sie diente dazu, vorab zu überprüfen, ob alle benötigten Mittel zur Verfügung stehen und um bei den beteiligten Personen entsprechen Zeit für z.B. Code Reviews zu buchen. Es wurde darauf geachtet, dass nur Software zum Einsatz kommt, welche entweder kostenfrei (z.B. als Freeware oder Open Source) angeboten wird oder für die die Camelot ITLab GmbH bereits Lizenzen besitzt. Dadurch sollten die Projektkosten möglichst gering gehalten werden.
 
 \subsection{Entwicklungsprozess}
 \label{sec:Entwicklungsprozess}
