--- a/Inhalt/Analysephase.tex
+++ b/Inhalt/Analysephase.tex
@@ -84,7 +84,7 @@ In der folgenden Tabelle ~\ref{tab:Nutzwertanalyse} werden noch einige weitere P
 
 \tabelle{Nutzwertanalyse}{tab:Nutzwertanalyse}{Nutzwertanalyse}
 
-Sowie die Wirtschaftlichkeitsanalyse als auch die Nutzwertanalyse, in welchem das Order Comment Tool mit 123 Punkten der klare Gewinner ist, haben gezeigt wie sinnvoll und hilfreich diese Projekt ist.
+Aus dieser Nutzwertanalyse geht das Order Comment Tool mit 123 Punkten als Gewinner hervor.
 
 \subsection{Anwendungsfälle}
 \label{sec:Anwendungsfaelle}
@@ -92,7 +92,7 @@ Während der Analysephase wurden einige der typischen Anwendungsfälle, die von 
 
 \subsection{Qualitätsanforderungen}
 \label{sec:Qualitaetsanforderungen}
-Wie bei jedem anderen Projekt der Camelot ITLab GmbH gelten auch hier die Programmierrichtlinien des Unternehmens. Eine Auszug mit den für dieses Projekt wichtigen Punkten findet sich im \Anhang{app:Programmierrichtlinien}. Außerdem muss es für den Administration Screen eine Eingabeüberprüfung geben, die verhindert, dass der User Keyfelder bzw. Felder, die in der Datenbanktabelle nicht vorhanden sind, angibt.
+Wie bei jedem anderen Projekt der Camelot ITLab GmbH gelten auch hier die Programmierrichtlinien des Unternehmens. Ein Auszug mit den für dieses Projekt wichtigen Punkten findet sich im \Anhang{app:Programmierrichtlinien}. Außerdem muss es für den Administration Screen eine Eingabeüberprüfung geben, die verhindert, dass der User Keyfelder bzw. Felder, die in der Datenbanktabelle nicht vorhanden sind, angibt.
 
 \subsection{Lastenheft/Fachkonzept}
 \label{sec:Lastenheft}
