--- a/Anhang/AnhangProgrammingGuidlines.tex
+++ b/Anhang/AnhangProgrammingGuidlines.tex
@@ -1,6 +1,6 @@
 \subsection{Programmierrichtlinien}
 \label{app:Programmierrichtlinien}
-Im folgenden Abschnitt werden kurz die am häufigsten gebrauchten Programmierrichtlinien des CAMELOT ITLabs aufgeführt.
+Im folgenden Abschnitt werden kurz die am häufigsten gebrauchten Programmierrichtlinien der Camelot ITLab GmbH aufgeführt.
 
 \subsubsection{Benennung}
 \label{Benennung}
