--- a/Meta.tex
+++ b/Meta.tex
@@ -2,7 +2,7 @@
 
 % Hinweis: der Titel muss zum Inhalt des Projekts passen und den zentralen Inhalt des Projekts deutlich herausstellen
 \newcommand{\titel}{Order Comment Tool}
-\newcommand{\untertitel}{Tool zu Unterstützung der Produktionsplaner}
+\newcommand{\untertitel}{Tool zur Unterstützung der Produktionsplaner}
 \newcommand{\kompletterTitel}{\titel{} -- \untertitel}
 
 \newcommand{\autorName}{Thomas Pöhlmann}
