--- a/Inhalt/Entwurfsphase.tex
+++ b/Inhalt/Entwurfsphase.tex
@@ -25,7 +25,7 @@ Im ECC werden zwei Datenbank Tabellen erstellt. Zum einen die /CAMELOT/OC\_COMT.
 \label{fig:ECC01}
 \end{figure} 
 
-Die Tabelle AUFK wird mittels einem Custom Include um ein Feld ZZ\_ORDER\_COMMENT erweitert. Dieses wird für die COR Erweiterung gebraucht. Außerdem wird eine Datenbank Tabelle /CAMELOT/OC\_SETT erstellt, wie in dem folgenden \ac{UML} beschrieben. In dieser Datenbank wird vorerst lediglich ein Feldname der AUFK gespeichert. Später muss diese Tabelle dann noch um einen Tabellenname erweitert werden.
+Die Tabelle AUFK wird mittels einem Custom Include um ein Feld \textsc{ZZ\_ORDER\_COMMENT} erweitert. Dieses wird für die COR Erweiterung gebraucht. Außerdem wird eine Datenbank Tabelle \textsc{/CAMELOT/OC\_SETT} erstellt, wie in dem folgenden \ac{UML} beschrieben. In dieser Datenbank wird vorerst lediglich ein Feldname der AUFK gespeichert. Später muss diese Tabelle dann noch um einen Tabellenname erweitert werden.
 
 \begin{figure}[htb]
 	\centering
