--- a/Inhalt/Implementierungsphase.tex
+++ b/Inhalt/Implementierungsphase.tex
@@ -44,6 +44,6 @@ Wie im \ac{ECC} findet auch im \ac{APO} die gesamte Geschäftlogik im Controller
 
 \subsection{Implementierung der RRP3 Erweiterung}
 \label{sec:Implementierung der RRP3 Erweiterung}   
-Um die RRP3 zu erweitern wurde nicht wie bei der COR1-3 Customer-Exits sondern ein \ac{BAdI} und eine implizite Erweiterung verwendet. Der Unterschied zwischen einem Customer-Exits und einem \ac{BAdI} ist, dass der \ac{BAdI} die neuere objektorientierte Variante eines Customer-Exits ist. Statt in Funktionsmodule Code einzufügen wird eine vordefinierte Klasse implementiert, deren Methoden wie bei den alten Customer-Exits zu einem bestimmten Zeitpunkt aufgerufen werden. Für diese RRP3 Erweiterung wurden der \ac{BAdI} /SAPAPO/RRP\_IO\_COL benötigt. Mit diesem war es möglich, an den Feldkatalog, eine interne Tabelle mit Informationen über darzustellende Felder, der RRP3 das Feld Order\_Comment anzufügen damit dieses im \ac{ALV} erscheint. Mittels einer zweiten Methode konnten dann die entsprechenden Kommentare in die Tabelle geschrieben werden. Außerdem musste eine implizite Erweiterung angelegt werden, da es mithilfe von Customer-Exits oder \ac{BAdI}s nicht möglich war, die t-style Tabelle der einzelnen Elemente in der \ac{ALV} Tabelle zu ändern, was allerding absolut notwendig ist, um z.B. den Kommentar editierbar zu machen. Die jeweiligen Methoden des \ac{BAdI}s und der impliziten Erweiterung rufen eine statische Methode in der RRP3 Klasse auf, welche genau den selben Namen hat wie die eigentliche Methode des \ac{BAdI}s, um einen besseren Überblick zu verschaffen und sie später gut bei Kunden implementieren zu können. Diese Methoden holen sich dann die Instance des Controllers bzw. eine wird erstellt und rufen dann die jeweiligen Controller Methoden auf.
+Um die RRP3 zu erweitern wurde nicht wie bei der COR1-3 Customer-Exits sondern ein \ac{BAdI} und eine implizite Erweiterung verwendet. Der Unterschied zwischen einem Customer-Exits und einem \ac{BAdI} ist, dass der \ac{BAdI} die neuere objektorientierte Variante eines Customer-Exits ist. Statt in Funktionsmodule Code einzufügen wird eine vordefinierte Klasse implementiert, deren Methoden wie bei den alten Customer-Exits zu einem bestimmten Zeitpunkt aufgerufen werden. Für diese RRP3 Erweiterung wurden der \ac{BAdI} \textsc{/SAPAPO/RRP\_IO\_COL} benötigt. Mit diesem war es möglich, an den Feldkatalog, eine interne Tabelle mit Informationen über darzustellende Felder, der RRP3 das Feld Order\_Comment anzufügen damit dieses im \ac{ALV} erscheint. Mittels einer zweiten Methode konnten dann die entsprechenden Kommentare in die Tabelle geschrieben werden. Außerdem musste eine implizite Erweiterung angelegt werden, da es mithilfe von Customer-Exits oder \ac{BAdI}s nicht möglich war, die t-style Tabelle der einzelnen Elemente in der \ac{ALV} Tabelle zu ändern, was allerding absolut notwendig ist, um z.B. den Kommentar editierbar zu machen. Die jeweiligen Methoden des \ac{BAdI}s und der impliziten Erweiterung rufen eine statische Methode in der RRP3 Klasse auf, welche genau den selben Namen hat wie die eigentliche Methode des \ac{BAdI}s, um einen besseren Überblick zu verschaffen und sie später gut bei Kunden implementieren zu können. Diese Methoden holen sich dann die Instance des Controllers bzw. eine wird erstellt und rufen dann die jeweiligen Controller Methoden auf.
 
 \Zwischenstand{Implementierungsphase}{Implementierung}
