--- a/Abkuerzungen.tex
+++ b/Abkuerzungen.tex
@@ -14,7 +14,7 @@
 % einen Platzhalter der die Breite der linken Spalte bestimmt.
 \begin{acronym}[WWWWW]
 	\acro{ABAP}{Advanced Business Application Programming}
-	\acro{ALV}{ABAP List View}
+	\acro{ALV}{ABAP List Viewer}
 	\acro{APO}{Advanced Planning and Optimization}
 	\acro{BAdI}{Business Add-In}
 	\acro{ERM}{En\-ti\-ty-Re\-la\-tion\-ship-Mo\-dell}
